<resources>
    <string name="app_name">Pusher</string>
    <string name="notifications_admin_channel_name">tres</string>
    <string name="notifications_admin_channel_description">cuatro</string>
    <string name="title">Messaging Pusher</string>
    <string name="device_info">Device Info</string>
    <string name="notification_info">Notification Info</string>
    <string name="geofence_info">Geofences List</string>
    <string name="deeplink_info">DeepLink Data</string>
    <string name="user_device_info">User Info</string>
    <string name="hint">"Type New Tag for this device."</string>
    <string name="hint_key">Key</string>
    <string name="hint_value">Value</string>
    <string name="example_activity_name">DeepLink Activity</string>
    <string name="example_activity_name_url">DeepLink Activity Universal Link</string>
    <string name="example_activity_name_url_schemas">DeepLink Activity URL Schema</string>
    <string name="get_started">GET STARTED</string>
    <string name="get_finish">FINISH</string>
    <string name="pusher_title">PUSHER</string>
    <string name="scan_title">scan your QRcode</string>
    <string name="get_continue">CONTINUE</string>
    <string name="hint_custom_field">CUSTOM FIELD</string>
    <string name="hint_email">EMAIL</string>
    <string name="hint_phone">PHONE</string>
    <string name="let_get_started_title">Lets Get Started</string>
    <string name="button_skip">Skip</string>
    <string name="title_activity_maps">Map</string>

    <string name="com.messaging.sdk.ACTION_FETCH_DEVICE"> Device Loaded </string>
    <string name="com.messaging.sdk.ACTION_REGISTER_DEVICE"> Device Registered </string>
    <string name="com.messaging.sdk.ACTION_FETCH_FIELDS"> Fields Loaded </string>
    <string name="com.messaging.sdk.ACTION_SAVE_DEVICE"> Device Saved </string>
    <string name="com.messaging.sdk.ACTION_FETCH_USER"> User Loaded </string>
    <string name="com.messaging.sdk.ACTION_SAVE_USER"> User Saved </string>
    <string name="com.messaging.sdk.PUSH_NOTIFICATION"> Push Notification </string>
    <string name="com.messaging.sdk.PUSH_NOTIFICATION_TO_OPE"> Notification Open </string>_OPEN";
    <string name="com.messaging.sdk.ACTION_FETCH_LOCATION"> Location Loaded </string>
    <string name="com.messaging.sdk.ACTION_FETCH_GEOFENCE"> Geofence Loaded </string>
    <string name="com.messaging.sdk.ACTION_GEOFENCE_ENTER"> IN </string>
    <string name="com.messaging.sdk.ACTION_GEOFENCE_EXIT"> OUT </string>
    <string name="com.messaging.sdk.PUSH_NOTIFICATION_TO_OPEN"> Notification Open </string>


</resources>
