<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_launcher_background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:text="@string/pusher_title"
            android:textColor="@color/whiteColor"
            android:textSize="42sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/scan_title"
            android:textColor="@color/whiteColor"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/imageView_visualizer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_title"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/imageView_visualizer"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@mipmap/ic_launcher"
            android:visibility="gone"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:progress="25"
            android:visibility="gone"
            tools:visibility="visible"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/greyColor"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:id="@+id/linearLayoutData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:visibility="visible"
            android:padding="20dp"
            android:src="@mipmap/ic_launcher"
            android:visibility="gone">



        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/button_skip"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_skip"
            android:textColor="@color/colorAccent" />

    </LinearLayout>
</ScrollView>