<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ScrollViewCount"
    xmlns:android="http://schemas.android.com/apk/res/android">

 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
     <TextView
         android:id="@+id/textView_imprimir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:lines="2"
         android:text="@string/title"
         android:textSize="35sp"
          />

     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@color/greyColor"
         android:gravity="center"
         android:layout_below="@+id/textView_imprimir"
         android:lines="2"
         android:text="@string/device_info"
         android:textColor="@color/whiteColor"
         android:textSize="28sp"
         />

     <ListView
         android:id="@+id/lista_device"
         android:layout_width="wrap_content"
         android:layout_height="241dp"
         android:layout_below="@+id/textView"
         tools:listitem="@layout/item_device" />

     <TextView
         android:id="@+id/textView_two"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/lista_device"
         android:background="@color/greyColor"
         android:gravity="center"
         android:lines="2"
         android:text="@string/user_device_info"
         android:textColor="@color/whiteColor"
         android:textSize="28sp" />

     <ListView
         android:id="@+id/lista_user"
         android:layout_width="wrap_content"
         android:layout_height="180dp"
         android:layout_below="@+id/textView_two"
         tools:listitem="@layout/item_device" />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/lista_user"
         android:background="@color/greyColor"
         android:gravity="center_horizontal"
         android:orientation="horizontal">

         <Button
             android:id="@+id/device"
             android:layout_width="80dp"
             android:layout_height="40dp"
             android:background="@color/greyColor"
             android:drawableStart="@android:drawable/ic_menu_directions"
             android:text="Device"
             android:textColor="@color/whiteColor"
             android:drawableLeft="@android:drawable/ic_menu_directions" />

         <Button
             android:id="@+id/user"
             android:layout_width="80dp"
             android:layout_height="40dp"
             android:layout_marginStart="30dp"
             android:layout_marginLeft="30dp"
             android:background="@color/greyColor"
             android:drawableStart="@android:drawable/ic_dialog_map"
             android:text="User"
             android:textColor="@color/whiteColor"
             android:drawableLeft="@android:drawable/ic_dialog_map" />

         <Button
             android:id="@+id/tag"
             android:layout_width="80dp"
             android:layout_height="40dp"
             android:background="@color/greyColor"
             android:drawableStart="@android:drawable/ic_menu_today"
             android:drawableLeft="@android:drawable/ic_menu_today"
             android:text="Tags"
             android:textColor="@color/whiteColor" />



         <Button
             android:id="@+id/save"
             android:layout_width="80dp"
             android:layout_height="40dp"
             android:layout_marginStart="30dp"
             android:layout_marginLeft="30dp"
             android:background="@color/greyColor"
             android:textColor="@color/whiteColor"
             android:drawableStart="@android:drawable/ic_menu_save"
             android:drawableLeft="@android:drawable/ic_menu_today"
             android:text="Save" />


     </LinearLayout>




 </RelativeLayout>


 </ScrollView>


